Tue Oct 19 17:58:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Port_Activator_T.h:
        * ciao/Servants/Port_Activator_T.cpp:
          Fixed memory leaks

        * ciao/Servants/Session/Servant_Impl_T.h:
          Layout changes

Tue Oct 19 13:46:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/Event_MemLeakDetection_Test/descriptors/Listen.cdp:
        * connectors/dds4ccm/tests/MemLeakDetection/State_MemLeakDetection_Test/descriptors/Listen.cdp:
          Resolved errors in deployment plan.

Tue Oct 19 13:18:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MemLeakDetection/Event_MemLeakDetection_Test/descriptors/Listen.cdp:
        * connectors/dds4ccm/tests/MemLeakDetection/State_MemLeakDetection_Test/descriptors/Listen.cdp:
          Added to explicitly test memory leaks in a listener.

Tue Oct 19 12:37:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * *.pl:
          Fixed typo

Tue Oct 19 12:40:36 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/MemLeakDetection/*:
          Added two test which are especially there to test for
          memory leaks.

Tue Oct 19 11:52:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
          Fixed incorrect number of deamons

Tue Oct 19 06:35:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * tests/CIF/Common/CIF_Common.h:
        * tests/CIF/Common/CIF_Common.cpp:
          Resolved memory leaks.

Mon Oct 18 18:39:11 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DAnCE/LocalityManager/CommandlinePassage/CommandlinePassage_exec.cpp:
          Fixed memory leak in this test

Mon Oct 18 13:49:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
