@@ -586,7 +586,7 @@ namespace CIAO
 
     try
       {
-        PortableServer::ServantBase_var srv_tmp =
+        PortableServer::ServantBase_var provider_tmp =
           this->component_poa_->reference_to_servant (provider);
 
         CIAO_DEBUG (9,
@@ -598,7 +598,7 @@ namespace CIAO
                      provider_port));
 
         CIAO::Connector_Servant_Impl_Base *prov_serv =
-          dynamic_cast<CIAO::Connector_Servant_Impl_Base *> (srv_tmp.in ());
+          dynamic_cast<CIAO::Connector_Servant_Impl_Base *> (provider_tmp.in ());
 
         if (!prov_serv)
           {
@@ -611,12 +611,14 @@ namespace CIAO
             throw ::Components::InvalidConnection ();
           }
 
-        srv_tmp = this->component_poa_->reference_to_servant (user);
+        PortableServer::ServantBase_var user_tmp =
+          this->component_poa_->reference_to_servant (user);
+
         CIAO_DEBUG (9, (LM_TRACE, CLINFO "Session_Container_i::connect_local_facet - "
                      "Successfully fetched user servant [%C] from POA\n", user_port));
 
         CIAO::Connector_Servant_Impl_Base *user_serv =
-          dynamic_cast<CIAO::Connector_Servant_Impl_Base *> (srv_tmp.in ());
+          dynamic_cast<CIAO::Connector_Servant_Impl_Base *> (user_tmp.in ());
 
         if (user_serv == 0)
           {
@@ -768,7 +770,7 @@ namespace CIAO
   Session_Container_i::set_attributes (CORBA::Object_ptr compref,
                                      const ::Components::ConfigValues & values)
   {
-    CIAO_TRACE("Session_Container_i::activate_component");
+    CIAO_TRACE("Session_Container_i::set_attributes");
 
     try
       {
@@ -875,11 +877,10 @@ namespace CIAO
       {
 
         CIAO::Connector_Servant_Impl_Base * svt = 0;
-        PortableServer::ServantBase_var servant_from_reference;
 
         try
           {
-            servant_from_reference =
+            PortableServer::ServantBase_var servant_from_reference =
               this->component_poa_->reference_to_servant (compref);
             svt =
               dynamic_cast<CIAO::Connector_Servant_Impl_Base *> (
@@ -948,11 +949,10 @@ namespace CIAO
     try
       {
         CIAO::Connector_Servant_Impl_Base * svt = 0;
-        PortableServer::ServantBase_var servant_from_reference;
 
         try
           {
-            servant_from_reference =
+            PortableServer::ServantBase_var servant_from_reference =
               this->component_poa_->reference_to_servant (compref);
             svt =
               dynamic_cast<CIAO::Connector_Servant_Impl_Base *> (
